fixed the error

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -16,7 +16,12 @@ Headings are cool
 You can have many headings
 ======
 
-Aren't headings cool?
+Markdown Section
 ------
+Some text
+![Alt text for accessibility](/images/fm_precession.jpg)
 
-{% include figure.html %}
+HTML Section
+------
+Test image
+<img src="/images/fm_precession.jpg" alt="My image description" width="500">
