--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,19 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
+title: 'Test Blog Post #1'
+date: 2024-10-26
 permalink: /posts/2012/08/blog-post-1/
 tags:
   - cool posts
   - category1
   - category2
+  - anothercategory
 ---
 
 This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
 
 Headings are cool
 ======
-
-You can have many headings
-======
+Lorem ipsum.
 
 Markdown Section
 ------
@@ -25,3 +24,12 @@ HTML Section
 ------
 Test image
 <img src="/images/fm_precession.jpg" alt="My image description" width="500">
+
+
+Antiferromagnetic Spin Dynamics
+=====
+Interactive HTML Graph Example
+<br/>
+<div style="height: 90vh;">
+    <iframe src="https://egecancogulu.github.io/files/AFM_test.html" width="100%" height="100%" style="border: none;"></iframe>
+</div>
