modified first publication

--- a/_publications/1_Gokce_2106.md
+++ b/_publications/1_Gokce_2106.md
@@ -7,7 +7,7 @@ excerpt: 'Resistance drift of the amorphous states of multilevel phase change me
 date: 2016-06-22
 venue: 'IEEE Transactions on Electron Devices'
 slidesurl: 'http://egecancogulu.github.io/files/1.Gokce2016.pdf'
-paperurl: 'http://egecancogulu.github.io/files/paper1.pdf'
+paperurl: 'https://ieeexplore.ieee.org/abstract/document/7497582'
 citation: 'Aisha Gokce, Ibrahim Cinar, Servet C Ozdemir, Egecan Cogulu, Barry Stipe, Jordan A Katine,and Ozhan Ozatay. Toward multiple-bit-per-cell memory operation with stable resistance levels in phase change nanodevices. IEEE Transactions on Electron Devices, 63(8):3103–3108, 2016'
 ---
 
