no reason to not work

--- a/_publications/2_Chen_2018.md
+++ b/_publications/2_Chen_2018.md
@@ -3,10 +3,9 @@ title: "First harmonic measurements of the spin Seebeck effect"
 collection: publications
 category: manuscripts
 permalink: /publications/2_Chen_2018
-excerpt: '
-This study presents a method combining AC and DC currents to measure the spin Seebeck effect (SSE) in YIG/Pt bilayers, showing that this approach enhances the SSE response and allows for exploration of nonlinear thermoelectric effects and spin dynamics under temperature gradients.'
+excerpt: 'This study presents a method combining AC and DC currents to measure the spin Seebeck effect (SSE) in YIG/Pt bilayers, showing that this approach enhances the SSE response and allows for exploration of nonlinear thermoelectric effects and spin dynamics under temperature gradients.'
 date: 2018-11-15
-
+venue: 'Applied Physical Letters (APL)'
 slidesurl: 'http://egecancogulu.github.io/files/2.Chen2018.pdf'
 paperurl: 'https://pubs.aip.org/aip/apl/article/113/20/202403/594320/First-harmonic-measurements-of-the-spin-Seebeck'
 
