--- a/_publications/2_Chen_2018.md
+++ b/_publications/2_Chen_2018.md
@@ -8,6 +8,7 @@ date: 2018-11-15
 venue: 'Applied Physical Letters (APL)'
 slidesurl: 'http://egecancogulu.github.io/files/2.Chen2018.pdf'
 paperurl: 'https://pubs.aip.org/aip/apl/article/113/20/202403/594320/First-harmonic-measurements-of-the-spin-Seebeck'
+citation: https://doi.org/10.1063/1.5053120
 
 ---
 
