corrected the gem file and updated all publications.

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,5 +1,5 @@
 ---
-title: 'Test Blog Post #1'
+title: 'My first post will come here, soon<sup>TM</sup>'
 date: 2024-10-26
 permalink: /posts/2012/08/blog-post-1/
 tags:
@@ -9,7 +9,7 @@ tags:
   - anothercategory
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+This is a sample blog post. Maybe it will be about A/B testing.
 
 Headings are cool
 ======
