modified all publications

--- a/_publications/11_Zheng_2022.md
+++ b/_publications/11_Zheng_2022.md
@@ -2,13 +2,23 @@
 title: "Ultra-thin lithium aluminate spinel ferrite films with perpendicular magnetic anisotropy and low damping"
 collection: publications
 category: manuscripts
-permalink: /publications/3_Riddiford_2019
-excerpt: 'tba'
+permalink: /publications/11_Zheng_2023
+excerpt: 'This study introduces ultra-thin Li₀.₅Al₁.₀Fe₁.₅O₄ (LAFO) films with perpendicular magnetic anisotropy, low damping, and no dead layers, achieving efficient magnetization switching and high spin-orbit torque efficiency, thus advancing spin-based electronics.'
 date: 2023-09-16
-venue: 'Applied Physical Letters (APL)'
-slidesurl: 'http://egecancogulu.github.io/files/3.Riddiford2019.pdf'
-paperurl: 'https://pubs.aip.org/aip/apl/article/115/12/122401/986260/Efficient-spin-current-generation-in-low-damping2'
+venue: 'Nature Communications'
+slidesurl: 'http://egecancogulu.github.io/files/11.Zheng2023.pdf'
+paperurl: 'https://www.nature.com/articles/s41467-023-40733-9'
 
 ---
 ### Abstract 
-Low-damping magnetic insulators are essential for pure spin current-based electronics as they can generate and transfer spin currents without associated charge currents. Nanometer-thick epitaxial thin films of low-damping magnetic insulators are particularly important in order to control and switch the magnetization via spin transfer torques. We have recently developed films of the ferromagnetic insulator Mg(Al,Fe)<sub>2</sub>O<sub>4</sub> (MAFO) with a low Gilbert damping parameter (0.001). In contrast to Y<sub>2</sub>OFe<sub>5</sub>O<sub>12</sub> (YIG), MAFO films can be grown on a variety of substrates and have significant in-plane magnetic anisotropy, leading to higher spin-wave frequencies. Here, we demonstrate efficient spin current injection from MAFO into adjacent Pt and b-W layers by ferromagnetic resonance (FMR) broadening and inverse spin Hall effect measurements. Angular  dependent magnetoresistance (ADMR) measurements indicate that the proximity effect magnetoresistance is small compared to the spin Hall magnetoresistance associated with spin pumping. FMR and ADMR measurements indicate that MAFO/Pt interfaces have a spin-mixing conductance of 2 x 10<sub>14</sub>  m<sup>2</sup> , comparable to that of YIG/Pt. These measurements also show that the spin transport can be described by Dyakonov-Perel spin relaxation combined with an extrinsic spin Hall effect (from skew scattering). These results demonstrate the promise of spinel ferrites for spin current-based spintronics.
+Ultra-thin films of low damping ferromagnetic insulators with perpendicular
+magnetic anisotropy have been identified as critical to advancing spin-based
+electronics by significantly reducing the threshold for current-induced magnetization switching while enabling new types of hybrid structures or devices.
+Here, we have developed a new class of ultra-thin spinel structure
+Li0.5Al1.0Fe1.5O4 (LAFO) films on MgGa2O4 (MGO) substrates with: 1) perpendicular magnetic anisotropy; 2) low magnetic damping and 3) the absence of
+degraded or magnetic dead layers. These films have been integrated with
+epitaxial Pt spin source layers to demonstrate record low magnetization
+switching currents and high spin-orbit torque efficiencies. These LAFO films on
+MGO thus combine all of the desirable properties of ferromagnetic insulators
+with perpendicular magnetic anisotropy, opening new possibilities for spin
+based electronics.
