--- a/_publications/6_Rehm_2021.md
+++ b/_publications/6_Rehm_2021.md
@@ -2,13 +2,13 @@
 title: "Thermal Effects in Spin-Torque Switching of Perpendicular Magnetic Tunnel Junctions at Cryogenic Temperatures"
 collection: publications
 category: manuscripts
-permalink: /publications/3_Riddiford_2019
-excerpt: 'tba'
-date: 2021-02-16
-venue: 'Applied Physical Letters (APL)'
+permalink: /publications/6_Rehm_2021
+excerpt: 'This study examines the temperature-dependent spin-torque switching probability in magnetic tunnel junction nanopillars, revealing that junction heating affects switching behavior below 75 K and leads to stochastic switching down to 4 K due to reduced thermal conductivity and heat capacity. '
+date: 2021-03-30
+venue: 'Physical Review Applied'
 slidesurl: 'http://egecancogulu.github.io/files/6.Rehm2021.pdf'
-paperurl: 'https://pubs.aip.org/aip/apl/article/115/12/122401/986260/Efficient-spin-current-generation-in-low-damping2'
+paperurl: 'https://journals.aps.org/prapplied/abstract/10.1103/PhysRevApplied.15.034088'
 
 ---
 ### Abstract 
-Low-damping magnetic insulators are essential for pure spin current-based electronics as they can generate and transfer spin currents without associated charge currents. Nanometer-thick epitaxial thin films of low-damping magnetic insulators are particularly important in order to control and switch the magnetization via spin transfer torques. We have recently developed films of the ferromagnetic insulator Mg(Al,Fe)<sub>2</sub>O<sub>4</sub> (MAFO) with a low Gilbert damping parameter (0.001). In contrast to Y<sub>2</sub>OFe<sub>5</sub>O<sub>12</sub> (YIG), MAFO films can be grown on a variety of substrates and have significant in-plane magnetic anisotropy, leading to higher spin-wave frequencies. Here, we demonstrate efficient spin current injection from MAFO into adjacent Pt and b-W layers by ferromagnetic resonance (FMR) broadening and inverse spin Hall effect measurements. Angular  dependent magnetoresistance (ADMR) measurements indicate that the proximity effect magnetoresistance is small compared to the spin Hall magnetoresistance associated with spin pumping. FMR and ADMR measurements indicate that MAFO/Pt interfaces have a spin-mixing conductance of 2 x 10<sub>14</sub>  m<sup>2</sup> , comparable to that of YIG/Pt. These measurements also show that the spin transport can be described by Dyakonov-Perel spin relaxation combined with an extrinsic spin Hall effect (from skew scattering). These results demonstrate the promise of spinel ferrites for spin current-based spintronics.
+Temperature plays an important role in spin-torque switching of magnetic tunnel junctions, causing magnetization fluctuations that decrease the switching voltage but also introduce switching errors. Here we present a systematic study of the temperature dependence of the spin-torque-switching probability of state-of-the-art perpendicular-magnetic-tunnel-junction nanopillars (40–60 nm in diameter) from room temperature down to 4 K, sampling up to a million switching events. The junction temperature at the switching voltage—obtained from the thermally assisted spin-torque-switching model—saturates at temperatures below about 75 K, showing that junction heating is significant below this temperature and that spin-torque switching remains highly stochastic down to 4 K. A model of heat flow in a nanopillar junction shows this effect is associated with the reduced thermal conductivity and heat capacity of the metals in the junction.
