--- a/_publications/4_Chen_2019.md
+++ b/_publications/4_Chen_2019.md
@@ -3,7 +3,7 @@ title: "Spin transport in an insulating ferrimagnetic-antiferromagnetic-ferrimag
 collection: publications
 category: manuscripts
 permalink: /publications/4_Chen_2019
-excerpt: 'tba'
+excerpt: "This study investigates spin current transport in a YIG/NiO/YIG trilayer, revealing a spin Seebeck effect (SSE) signal increase at low temperatures due to paramagnetic effects in the GGG substrate, and identifying NiO's spin diffusion length as ∼3.8 nm, which aids understanding of spin currents in magnetic insulators."
 date: 2019-10-25
 venue: 'Applied Physical Letters (APL)'
 slidesurl: 'http://egecancogulu.github.io/files/4.Chen2019.pdf'
