modified the portfolio and post section

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,35 +1,16 @@
 ---
-title: 'My first post will come here, soon<sup>TM</sup>'
-date: 2024-10-26
-permalink: /posts/2012/08/blog-post-1/
+title: 'Bootstrapping and P-values in A/B Testing'
+date: 2024-11-11
+permalink: /posts/2024/11/A-B Testing/
 tags:
-  - cool posts
-  - category1
-  - category2
-  - anothercategory
+  - Data Science
+  - A/B Testing
+  - Hypothesis Testing
 ---
 
-This is a sample blog post. Maybe it will be about A/B testing.
-
-Headings are cool
-======
-Lorem ipsum.
+This is a sample blog post. It will be about A/B testing.
 
 Markdown Section
 ------
-Some text
-![Alt text for accessibility](/images/fm_precession.jpg)
-
-HTML Section
-------
-Test image
-<img src="/images/fm_precession.jpg" alt="My image description" width="500">
-
-
-Antiferromagnetic Spin Dynamics
-=====
-Interactive HTML Graph Example
-<br/>
-<div style="height: 90vh;">
-    <iframe src="https://egecancogulu.github.io/files/AFM_test.html" width="100%" height="100%" style="border: none;"></iframe>
-</div>
+Here is a sneak peek:
+![Alt text for accessibility](/images/ab_test.png)
